// Code generated by "github.com/lesomuns/entpb/pbgen". DO NOT EDIT.

syntax = "proto3";

package entpb.directory;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/lesomnus/entpb/internal/example/pb";

enum Role {
	ROLE_UNSPECIFIED = 0;
	ROLE_MEMBER = 10;
	ROLE_ADMIN = 20;
	ROLE_OWNER = 30;
}

message Account {
	bytes id = 1;
	string alias = 2;
	User owner = 3;
	Silo silo = 4;
	repeated Membership memberships = 5;
	Role role = 6;
	string name = 7;
	string description = 8;
	google.protobuf.Timestamp date_created = 15;
}

message Conf {
	string id = 1;
	string value = 2;
	google.protobuf.Timestamp date_updated = 14;
	google.protobuf.Timestamp date_created = 15;
}

message Identity {
	bytes id = 1;
	User owner = 2;
	string kind = 3;
	string value = 4;
	optional string verifier = 5;
	string name = 7;
	string description = 8;
	google.protobuf.Timestamp date_created = 15;
}

message Invitation {
	bytes id = 1;
	Account inviter = 3;
	Silo silo = 4;
	string invitee = 5;
	string type = 6;
	optional google.protobuf.Timestamp date_canceled = 11;
	optional google.protobuf.Timestamp date_declined = 12;
	optional google.protobuf.Timestamp date_accepted = 13;
	google.protobuf.Timestamp date_expired = 14;
	google.protobuf.Timestamp date_created = 15;
}

message Membership {
	bytes id = 1;
	Account account = 3;
	Team team = 4;
	Role role = 6;
	google.protobuf.Timestamp date_created = 15;
}

message Silo {
	bytes id = 1;
	string alias = 2;
	string name = 7;
	string description = 8;
	google.protobuf.Timestamp date_created = 15;
}

message Team {
	bytes id = 1;
	string alias = 2;
	Silo silo = 3;
	string name = 7;
	string description = 8;
	google.protobuf.Timestamp date_created = 15;
}

message Token {
	bytes id = 1;
	string value = 2;
	string type = 3;
	string name = 4;
	User owner = 5;
	optional Token parent = 6;
	repeated Token children = 7;
	uint64 use_count_limit = 8;
	google.protobuf.Timestamp date_expired = 14;
	google.protobuf.Timestamp date_created = 15;
}

message User {
	bytes id = 1;
	string alias = 2;
	optional User parent = 3;
	repeated User children = 4;
	repeated Identity identities = 5;
	repeated Account accounts = 6;
	// For users created by other users, this value is initially NULL.
	optional google.protobuf.Timestamp date_unlocked = 14;
	google.protobuf.Timestamp date_created = 15;
}
